# libpirates

./: .gitignore  CMakeLists.txt  README.md  config.ini
source/: config_module.cpp  config_module.h
source/nametag/: nametagGlobals.I  nametagGlobals.h
source/seapatch/: seaPatchNode.cxx  seaPatchNode.h  seaPatchRoot.I  seaPatchRoot.cxx  seaPatchRoot.h
src/: run_interrogate.py
src/core/: config_libpirates.cxx  config_libpirates.h
src/seapatch/: seaPatchNode.I  seaPatchNode.cxx  seaPatchNode.h
